[package]
name = "fcheck"
version = "0.1.6"
edition = "2024"
license = "MIT"
description = "Cool tool for checking enabled and disabled features of a specified crate within a cargo project"
repository = "https://github.com/urparvezali/fcheck"
readme = "readme.md"
keywords = ["cli", "tool", "feature", "check", "cargo"]
categories = ["command-line-utilities", "development-tools"]


[dependencies]
cargo_metadata = "0.19.2"
clap = { version = "4.5.35", features = ["derive"] }

[[bin]]
name = "fcheck"
path = "src/main.rs"
